--- a/api-ventas/src/main/resources/application.properties
+++ b/api-ventas/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.username=postgres
 spring.datasource.password=Passw0rd234
 spring.jpa.properties.hibernate.default_schema=produccion
 spring.jpa.hibernate.ddl-auto=update
+server.port=8081
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
